fixed time input sizes to be responsive on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -119,6 +119,3 @@ input:-moz-placeholder {
   margin-left: auto;
   margin-right: auto;
 }
-
-input[type="time"]::-webkit-calendar-picker-indicator {
-}
